--- a/cus_config.yaml
+++ b/cus_config.yaml
@@ -25,86 +25,73 @@ plugins:
       minimal_ttl: 300
       maximum_ttl: 3600
 
-
-  # 本地移动 dns
-  - tag: cmdns
-    type: fast_forward
-    args:
-      upstream:
-        - addr: "218.201.17.2" # 本地ipv4
-        - addr: "2409:8060:20ea:100::1" # 本地ipv6
-
   # 阿里 dns
   - tag: ali
     type: fast_forward
     args:
       upstream:
         - addr: "223.5.5.5"
-        - addr: "2400:3200::1"
-        - addr: "https://dns.alidns.com/dns-query"
-          ip_addr:
-            - "223.5.5.5"
-            - "2400:3200::1"
-          trusted: true
+        - addr: "https://dns.alidns.com/dns-query" 
+          dial_addr: "223.5.5.5"            
+          trusted: true 
         - addr: "tls://dns.alidns.com"
-          ip_addr:
-            - "223.5.5.5"
-            - "2400:3200::1"
-          trusted: true
+          dial_addr: "223.5.5.5"
+          trusted: true       
 
-  # 腾讯 dnspod备用
+  # 腾讯 dnspod
   - tag: dnspod
     type: fast_forward
     args:
       upstream:
         - addr: "119.29.29.29"
-        - addr: "2402:4e00::"
-        - addr: "https://doh.pub/dns-query"
+        - addr: "https://doh.pub/dns-query" 
           dial_addr: "1.12.12.12"
-          trusted: true
-        - addr: "tls://dot.pub"
+          trusted: true 
+        - addr: "tls://dot.pub" 
           dial_addr: "1.12.12.12"
-          trusted: true
+          trusted: true           
+
+  # 本地 dns 备用
+  - tag: localdns
+    type: fast_forward
+    args:
+      upstream:
+        - addr: "10.1.1.1:53"
 
   # google dns
   - tag: google
     type: fast_forward
     args:
       upstream:
-        - addr: "https://dns.google/dns-query"
+        - addr: "https://dns.google/dns-query" 
+          dial_addr: "8.8.4.4"
+          trusted: true 
+        - addr: "tls://dns.google" 
           dial_addr: "8.8.4.4"
           trusted: true
-        - addr: "https://dns64.dns.google/dns-query" # 只针对IPv6的DoH
-          dial_addr: "2001:4860:4860::64"
-          trusted: true
-        - addr: "tls://dns.google"
-          dial_addr: "8.8.4.4"
-          trusted: true
-
-  # 思科 opendns
-  - tag: opendns
-    type: fast_forward
-    args:
-      upstream:
-        - addr: "https://doh.opendns.com/dns-query"
-          ip_addr:
-            - "208.67.222.222"
-            - "2620:119:35::35"
-          trusted: true
-
+      
   # cloudflare
   - tag: cloudflare
     type: fast_forward
     args:
       upstream:
-        - addr: "https://cloudflare-dns.com/dns-query"
-          ip_addr:
-            - "1.1.1.1"
-            - "2606:4700:4700::1001"
-          trusted: true
-        - addr: "tls://1dot1dot1dot1.cloudflare-dns.com"
-          dial_addr: "1.1.1.1"
-          trusted: true
+        - addr: "https://cloudflare-dns.com/dns-query" 
+          dial_addr: "1.0.0.1"
+          trusted: true 
+        - addr: "tls://cloudflare-dns.com" 
+          dial_addr: "1.0.0.1"
+          trusted: true 
+          
+  # doq 备用
+  - tag: adguard
+    type: forward
+    args:
+      upstream:
+        - addr: "quic://dns-unfiltered.adguard" # 服务器地址
+          ip_addr: # 手动指定服务器的 IP 地址 可以配置多个
+            - "94.140.14.140"
+            - "94.140.14.141"
+          trusted: true # 是否是可信服务器
 
   # local 序列
   - tag: forward_local
@@ -113,10 +100,10 @@ plugins:
       exec:
         - primary:
           - parallel: # 并行
-              - - "cmdns" # 执行序列 #1。
-              - - "ali" # 执行序列 #2。
+              - - "ali" # 执行序列 #1。
+              - - "dnspod" # 执行序列 #2。
           secondary:
-            - dnspod # 备用dnspod
+            - localdns # 备用本地
           fast_fallback: 400 # 这里建议设置成 primary 服务器正常延时的 2~5 倍 单位: 毫秒。
           always_standby: true
 
@@ -128,14 +115,20 @@ plugins:
         - primary:
             - parallel: # 并行
                 - - "google" # 执行序列 #1。
-                - - "opendns" # 执行序列 #2。
+                - - "cloudflare" # 执行序列 #2。
           secondary:
-            - cloudflare # 备用 cloudflare
+            - adguard # 备用 adguard
           fast_fallback: 600 # 这里建议设置成 primary 服务器正常延时的 2~5 倍 单位: 毫秒。
           always_standby: true
 
 
   ################ 匹配器插件 #################
+  # 匹配本地域名的插件
+  - tag: hosts
+    type: hosts
+    args:
+      hosts:
+        - '14.test.com 2407:f430:0:4127::24'
 
   # 匹配本地域名的插件
   - tag: query_is_local_domain
@@ -215,10 +208,10 @@ plugins:
 servers:
   - exec: main_sequence
     listeners:
-      - protocol: udp
-        addr: "[::1]:5335"
-      - protocol: tcp
-        addr: "[::1]:5335"
+      # - protocol: udp
+      #   addr: "[::1]:5335"
+      # - protocol: tcp
+      #   addr: "[::1]:5335"
       - protocol: udp
         addr: "0.0.0.0:5335"
       - protocol: tcp
