--- a/cus_config.yaml
+++ b/cus_config.yaml
@@ -208,11 +208,11 @@ plugins:
 servers:
   - exec: main_sequence
     listeners:
-      # - protocol: udp
-      #   addr: "[::1]:5335"
-      # - protocol: tcp
-      #   addr: "[::1]:5335"
       - protocol: udp
-        addr: "0.0.0.0:5335"
+        addr: "[::1]:5335"
       - protocol: tcp
-        addr: "0.0.0.0:5335"
+        addr: "[::1]:5335"
+      - protocol: udp
+        addr: "127.0.0.1:5335"
+      - protocol: tcp
+        addr: "127.0.0.1:5335"
